refactor(bulletin-controller): optimize data processing and add constants
Refactor the BulletinController to use more efficient stream operations and introduce
constants for repeated string literals, enhancing code readability and maintainability.
Replace Collector usage with toList method calls, streamline field mapping inbuildFieldsListFromMetricFieldList, and adjust metric field initialization with
predefined constants.